# ralk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.json  scene.json
.claude/projects/-Users-luchoqq-repos-ralk/memory/: project_state.md
assets/: LICENSES.md
assets/props/: default_props.json
docs/: architecture.md  gotchas.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  stack-desicions.md
examples/driving_game/: README.md
memory/: MEMORY.md  project_m3_phase15.md
scenes/: .last_session.json  mi_escena.json  sandbox.json
scripts/: game.lua
shaders/: bloom_downsample.frag  bloom_upsample.frag  composite.frag  cull.comp  fullscreen.vert  particle.frag  particle.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  triangle.frag  triangle.vert  wireframe.vert
src/: main.rs
src/asset/: config.rs  loader.rs  mod.rs  prefab.rs  props.rs  scene_file.rs  shader_compiler.rs
src/audio/: mod.rs
src/engine/: gpu_profiler.rs  gpu_resources.rs  mod.rs  pipeline.rs  render_graph.rs  skybox.rs  vertex.rs  vulkan_init.rs
src/input/: mod.rs
src/physics/: mod.rs
src/scene/: camera.rs  culling.rs  ecs.rs  gizmo.rs  lights.rs  mod.rs  picking.rs
src/scripting/: mod.rs
src/ui/: mod.rs  panels.rs
