[package]
name = "ralk"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38", features = ["loaded"] }
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }
gpu-allocator = { version = "0.27", features = ["vulkan"] }
gltf = { version = "1", features = ["utils"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[build-dependencies]
shaderc = "0.8"
