[package]
name = "ralk"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38", features = ["loaded"] }
ash-window = "0.13"
winit = "0.30"
raw-window-handle = "0.6"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.16", features = ["derive"] }
gpu-allocator = { version = "0.27", features = ["vulkan"] }
gltf = { version = "1", features = ["utils"] }
hecs = "0.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
egui = "0.33"
egui-winit = "0.33"
egui-ash-renderer = { version = "0.11", features = ["dynamic-rendering"] }
notify = "7"
shaderc = "0.8"
gilrs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rapier3d = { version = "0.22", features = ["simd-stable"] }
rodio = "0.19"
meshopt = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
shaderc = "0.8"

# ---------------------------------------------------------------------------
# Examples
# ---------------------------------------------------------------------------

# The driving game is the same binary as `cargo run` — the engine and game
# live together in src/main.rs.  The [[example]] entry lets users run it via
# `cargo run --example driving_game` without any extra setup.
[[example]]
name = "driving_game"
path = "src/main.rs"
